Emp/School in flex + competences done + color fixed

--- a/index.html
+++ b/index.html
@@ -142,47 +142,32 @@
             <h1><span>Scolarité:</span></h1>
          </div>
  
-         <div class="five columns main-col">
+
+         <div class="nine columns main-col">
+          <div class="hop row item">
  
-            <div class="row item">
- 
-               <div class="twelve columns">
- 
+               <div>
                   <h3 id="monnet">Cité scolaire Jean Monnet-Mermoz</h3>
                   <p class="info">Baccalauréat S/SI/ISN <span>&bull;</span> <em class="date">2012-2015</em></p>
- 
                </div>
- 
-            </div> <!-- item end -->
- 
-            <div class="row item">
- 
-               <div class="twelve columns">
- 
-                  <h3 id="iutclerm">I.U.T informatique Clermont-Ferrand</h3>
-                  <p class="info">D.U.T informatique<span>&bull;</span> <em class="date">2015-2018</em></p>
- 
-               </div>
- 
-            </div> <!-- item end -->
- 
-         </div> <!-- main-col end -->
-       
-        <div class="four columns ">
- 
-            <div class="row item">
- 
+
                <div id="iutlyc" class="twelve columns">
                     <img src="images/lyc.jpg" alt="Heigth Slide">
                </div>
-               <div id="iutlogo" class="twelve columns">
+          </div>
+
+          <div class="hop row item">
+ 
+               <div>
+                  <h3 id="monnet">CI.U.T informatique Clermont-Ferrand</h3>
+                  <p class="info">D.U.T informatique <span>&bull;</span> <em class="date">2015-2018</em></p>
+               </div>
+
+               <div id="iutlyc" class="twelve columns">
                     <img src="images/iut.jpg" alt="Heigth Slide">
-                </div>
-            </div>
- 
-        </div>
-       
- 
+               </div>
+          </div>
+         </div>
       </div> <!-- End Education -->
 
 
@@ -194,54 +179,36 @@
             <h1><span>Emplois:</span></h1>
          </div>
 
-         <div class="five columns main-col">
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3 id="fest">Ventes/Informations</h3>
-                  <p class="info">Vendeur<span>&bull;</span> <em class="date">2015/2016/2017</em></p>
-
-                  <p>
-                  Point d'accueil, de ventes et d'informations </br> pour l'association Eclat : </br> responsable du festival international de rue.
-                  </p>
-
+         <div class="nine columns main-col">
+          <div class="hop row item">
+ 
+               <div>
+                  <h3 id="monnet">Ventes/Informations</h3>
+                  <p class="info">Vendeur <span>&bull;</span> <em class="date">2015-2016-2017</em></p>
+                  <p>Point d'accueil, de ventes et d'informations 
+                  pour l'association Eclat : 
+                  responsable du festival international de rue.</p>
                </div>
 
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3 id="rest">Restauration</h3>
-                  <p class="info">Chef de rang<span>&bull;</span> <em class="date">2017</em></p>
-
-                  <p>
-                  Service, bar, plonge.. au sein de 2 affaires parisiennes. </br> - Marinette et Au Bureau (Chatou) 
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-         </div> <!-- main-col end -->
-
-         <div class="four columns ">
- 
-            <div class="row item">
- 
-               <div id="festiv" class="twelve columns">
+               <div id="iutlyc" class="twelve columns">
                     <img src="images/fest.jpg" alt="Heigth Slide">
                </div>
-               <div id="aubumar" class="twelve columns">
-                    <img src="images/aubureau.png" alt="Heigth Slide">
-                </div>
-            </div>
- 
-        </div>
+          </div>
 
+          <div class="hop row item">
+ 
+               <div>
+                  <h3 id="monnet">Restauration</h3>
+                  <p class="info">Chef de rang<span>&bull;</span> <em class="date">2017</em></p>
+                  <p>Service, bar, plonge.. au sein de 2 affaires parisiennes.</br>
+                  - Marinette et Au Bureau (Chatou)</p>
+               </div>
+
+               <div id="aub" class="twelve columns">
+                    <img src="images/aubureau.png" alt="Heigth Slide">
+               </div>
+          </div>
+         </div>
       </div> <!-- End Work -->
 
 
@@ -281,29 +248,40 @@
    <section id="portfolio">
       <!-- List group -->
       <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+        <a class="pop list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">List group item heading</h5>
-            <small>3 days ago</small>
+            <h5 class="or mb-1"><strong><bold><u>Langages informatique</u></bold></strong></h5>
           </div>
-          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          <small>Donec id elit non mi porta.</small>
+          <p class="mb-1">Ruby, PHP, C, C# (WPF), C++, Java/JavaFx, SQL, PLSQL, ProC, Processing, Html (Bootstrap), Css, JavaScript, JQuerry.</p>
+          <small>Données pouvant être mises à jour.</small>
         </a>
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+        <a  class="pop list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">List group item heading</h5>
-            <small class="text-muted">3 days ago</small>
+            <h5 class="or mb-1"><strong><bold><u>Méthodologie et modélisation</u></bold></strong></h5>
           </div>
-          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          <small class="text-muted">Donec id elit non mi porta.</small>
+          <p class="mb-1">Modèle entité - associations, UML.</p>
+          <small class="text-muted">Données pouvant être mises à jour.</small>
         </a>
-        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+        <a class="pop list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">List group item heading</h5>
-            <small class="text-muted">3 days ago</small>
+            <h5 class="or mb-1"><strong><bold><u>Système d'exploitation et réseaux</u></bold></strong></h5>
+          </div>
+          <p class="mb-1">Mac OSX, Windows, Linux.</p>
+          <small class="text-muted">Données pouvant être mises à jour.</small>
+        </a>
+        <a class="pop list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="or mb-1"><strong><bold><u>Outils et atelier génie logiciel</u></bold></strong></h5>
+          </div>
+          <p class="mb-1">Android Studio, Visual Studio, Eclipse, Tortoise-SVN, Github, Scilba, Sublime Text, NetBeans, Drupal...</p>
+          <small class="text-muted">Données pouvant être mises à jour.</small>
+        </a>
+        <a class="pop list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="or mb-1"><strong><bold><u>Système gestion bases de données</u></bold></strong></h5>
           </div>
           <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-          <small class="text-muted">Donec id elit non mi porta.</small>
+          <small class="text-muted">Données pouvant être mises à jour.</small>
         </a>
       </div>
 
