--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
    <!-- About Section
    ================================================== -->
-   <section id="about">
+   <section id="about" class="sec">
 
       <div id="myCarousel" class="carousel slide carousel-fade"" data-ride="carousel">
         <!-- Carousel indicators -->
@@ -132,7 +132,7 @@
 
    <!-- Resume Section
    ================================================== -->
-    <section id="resume">
+    <section id="resume" class="sec">
  
       <!-- Education
      ----------------------------------------------- -->
@@ -214,7 +214,7 @@
 
       <!-- Skills
       ----------------------------------------------- -->
-      <section id="comp">
+      <section id="comp" class="sec">
         <div class="row skill">
 
            <div class="three columns header-col">
@@ -245,7 +245,7 @@
 
    <!-- Portfolio Section
    ================================================== -->
-   <section id="portfolio">
+   <section id="portfolio" class="sec">
       <!-- List group -->
       <div class="list-group">
         <a class="pop list-group-item list-group-item-action flex-column align-items-start">
@@ -291,7 +291,7 @@
 
    <!-- Contact Section
    ================================================== -->
-   <section id="contact">
+   <section id="contact" class="sec">
 
          <div class="row section-head">
 
@@ -315,17 +315,17 @@
             <div id="form" class="eight columns">
 
                <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
+               <form action="send_mail.php" method="post" id="contactForm" name="contactForm">
 					<fieldset>
 
                   <div>
 						   <label for="contactName">Nom <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactName" name="contactName">
+						   <input type="text" value="" size="35" id="contactName" name="contactName" required>
                   </div>
 
                   <div>
 						   <label for="contactEmail">Email <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactEmail" name="contactEmail">
+						   <input type="text" value="" size="35" id="contactEmail" name="contactEmail" required>
                   </div>
 
                   <div>
@@ -335,14 +335,14 @@
 
                   <div>
                      <label for="contactMessage">Message <span class="required">*</span></label>
-                     <textarea cols="50" rows="15" id="contactMessage" name="contactMessage"></textarea>
+                     <textarea cols="50" rows="15" id="contactMessage" name="contactMessage" required></textarea>
                   </div>
 
                   <div>
                      <button id="submit" class="submit">Soumettre</button>
-                     <span id="image-loader">
+                     <!--<span id="image-loader">
                         <img alt="" src="images/loader.gif">
-                     </span>
+                     </span>-->
                   </div>
 
 					</fieldset>
