--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <hr />
             <ul class="social">
                <li><a href="https://twitter.com/GabinSalabert"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://www.linkedin.com/in/gabin-salabert-30077b150/"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/gabzslbt/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/gabin-salabert-30077b150/"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.pinterest.fr/gabinsalabert/"><i class="fa fa-pinterest"></i></a></li>
                <li><a href="https://github.com/GabinSalabert"><i class="fa fa-github"></i></a></li>
             </ul>
@@ -137,7 +137,7 @@
  
       <!-- Education
      ----------------------------------------------- -->
-      <div class="row education">
+      <div id="school" class="row education">
  
          <div class="three columns header-col">
             <h1><span>Scolarité:</span></h1>
@@ -381,8 +381,8 @@
                   </br></br>
                   <ul id="res" class="social">
                      <li><a href="https://twitter.com/GabinSalabert"><i class="fa fa-twitter"></i></a></li>
-                     <li><a href="https://www.linkedin.com/in/gabin-salabert-30077b150/"><i class="fa fa-linkedin"></i></a></li>
                      <li><a href="https://www.instagram.com/gabzslbt/"><i class="fa fa-instagram"></i></a></li>
+                     <li><a href="https://www.linkedin.com/in/gabin-salabert-30077b150/"><i class="fa fa-linkedin"></i></a></li>
                      <li><a href="https://www.pinterest.fr/gabinsalabert/"><i class="fa fa-pinterest"></i></a></li>
                      <li><a href="https://github.com/GabinSalabert"><i class="fa fa-github"></i></a></li>
                   </ul>
