--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
  
       <!-- Education
      ----------------------------------------------- -->
-      <div id="school" class="row education">
+      <div class="bgtrain row education">
  
          <div class="three columns header-col">
             <h1><span>Scolarité:</span></h1>
@@ -174,7 +174,7 @@
 
       <!-- Work
       ----------------------------------------------- -->
-      <div class="row work">
+      <div class="bgtrain row work">
 
          <div class="three columns header-col">
             <h1><span>Emplois:</span></h1>
@@ -215,7 +215,7 @@
 
       <!-- Skills
       ----------------------------------------------- -->
-      <section id="comp" class="sec">
+      <section id="comp" class="bgtrain sec">
         <div class="row skill">
 
            <div class="three columns header-col">
