Todo : fix design and colors

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
    ================================================== -->
    <section id="about" class="sec">
     <div id="carousel-container">
-      <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -98,33 +98,35 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active img-fluid">
-                <img src="images/cook1.png" alt="First Slide">
+                <img class="d-block w-100" src="images/cook1.png" alt="First Slide">
             </div>
             <div class="item img-fluid">
-                <img src="https://i.gyazo.com/da2eb8c57788a96b15dd6c6ee8225f31.png" alt="Second Slide">
+                <img class="d-block w-100" src="https://i.gyazo.com/da2eb8c57788a96b15dd6c6ee8225f31.png" alt="Second Slide">
             </div>
             <div class="item img-fluid">
-                <img src="https://i.gyazo.com/f029200651d1b4ae7390331c61bc4d35.png" alt="Third Slide">
+                <img class="d-block w-100" src="https://i.gyazo.com/f029200651d1b4ae7390331c61bc4d35.png" alt="Third Slide">
             </div>
             <div class="item img-fluid">
-                <img src="https://i.gyazo.com/8846ea067228314b311e7ef8285882ef.png" alt="Fourth Slide">
+                <img class="d-block w-100" src="https://i.gyazo.com/8846ea067228314b311e7ef8285882ef.png" alt="Fourth Slide">
             </div>
             <div id="sok1" class="item img-fluid">
-                <img src="https://i.gyazo.com/5a550884e67d5fbf189087f661ea98c3.png" alt="Fifth Slide">
+                <img class="d-block w-100" src="https://i.gyazo.com/5a550884e67d5fbf189087f661ea98c3.png" alt="Fifth Slide">
             </div>
             <div class="item img-fluid">
-                <img src="https://i.gyazo.com/5545142483bfdb152edc7ac9d422e361.png" alt="Seventh Slide">
+                <img class="d-block w-100" src="https://i.gyazo.com/5545142483bfdb152edc7ac9d422e361.png" alt="Seventh Slide">
             </div>
             <div class="item img-fluid">
-                <img src="https://i.gyazo.com/710dc68040e6d8158081ffb41c1eed10.png" alt="Heigth Slide">
+                <img class="d-block w-100" src="https://i.gyazo.com/710dc68040e6d8158081ffb41c1eed10.png" alt="Heigth Slide">
             </div>
         </div>
         <!-- Carousel controls -->
         <a class="carousel-control left" href="#myCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Next</span>
         </a>
         <a class="carousel-control right" href="#myCarousel" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Prev</span>
         </a>
       </div>
     </div>
@@ -160,7 +162,7 @@
           <div class="hop row item">
  
                <div>
-                  <h3 id="monnet">CI.U.T informatique Clermont-Ferrand</h3>
+                  <h3 id="monnet">I.U.T informatique Clermont-Ferrand</h3>
                   <p class="info">D.U.T informatique <span>&bull;</span> <em class="date">2015-2018</em></p>
                </div>
 
@@ -229,9 +231,9 @@
   				   <ul class="skills">
   					  <li><span class="bar-expand langages"></span><em>Langages informatique</em></li>
               <li><span class="bar-expand methodo"></span><em>Méthodologie et modélisation</em></li>
-  						<li><span class="bar-expand systeme"></span><em>Système d'exploitation et réseaux</em></li>
-  						<li><span class="bar-expand logiciel"></span><em>Outils et atelier génie logiciel</em></li>
-  						<li><span class="bar-expand bdd"></span><em>Système gestion bases de données</em></li>
+  						<li><span class="bar-expand systeme"></span><em></br>Système d'exploitation et réseaux</em></li>
+  						<li><span class="bar-expand logiciel"></span><em></br>Outils et atelier génie logiciel</em></li>
+  						<li><span class="bar-expand bdd"></span><em></br>Système gestion bases de données</em></li>
   					</ul>
 
   				</div><!-- end skill-bars -->
