--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
    ================================================== -->
    <section id="about" class="sec">
     <div id="carousel-container">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -94,6 +94,10 @@
             <li data-target="#myCarousel" data-slide-to="4"></li>
             <li data-target="#myCarousel" data-slide-to="5"></li>
             <li data-target="#myCarousel" data-slide-to="6"></li>
+            <li data-target="#myCarousel" data-slide-to="7"></li>
+            <li data-target="#myCarousel" data-slide-to="8"></li>
+            <li data-target="#myCarousel" data-slide-to="9"></li>
+            <li data-target="#myCarousel" data-slide-to="10"></li>
         </ol>   
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
@@ -117,6 +121,19 @@
             </div>
             <div class="item img-fluid">
                 <img class="d-block w-100" src="https://i.gyazo.com/710dc68040e6d8158081ffb41c1eed10.png" alt="Heigth Slide">
+            </div>
+
+            <div class="item img-fluid">
+                <img class="d-block w-100" src="images/pok1.png" alt="Nine Slide">
+            </div>
+            <div class="item img-fluid">
+                <img class="d-block w-100" src="images/pok2.png" alt="Ten Slide">
+            </div>
+            <div class="item img-fluid">
+                <img class="d-block w-100" src="images/news1.png" alt="Eleven Slide">
+            </div>
+            <div class="item img-fluid">
+                <img class="d-block w-100" src="images/news2.png" alt="Twelve Slide">
             </div>
         </div>
         <!-- Carousel controls -->
@@ -400,11 +417,13 @@
 
    <!-- footer
    ================================================== -->
-   <footer>
+   <footer id="foot">
 
-      <div class="row">
+    <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
 
-         <div id="foot" class="twelve columns">
+      <div class="row fl">
+
+         <div class="twelve columns fl">
 
             <ul class="copyright">
                <li>&copy; 2017, All rights reserved, by Gabin Salabert. </li>
@@ -412,8 +431,6 @@
             </ul>
 
          </div>
-
-         <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
 
       </div>
 
@@ -430,6 +447,9 @@
    <script src="js/jquery.fittext.js"></script>
    <script src="js/magnific-popup.js"></script>
    <script src="js/init.js"></script>
+   <script type="text/javascript">
+     $('.carousel').carousel();
+   </script>
 </body>
 
 </html>
