Little bug fixed

--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
   				<div class="bars">
 
   				   <ul class="skills">
-  					  <li><span class="bar-expand langages"></span><em>Langages informatique</em></li>
-              <li><span class="bar-expand methodo"></span><em>Méthodologie et modélisation</em></li>
+  					  <li><span class="bar-expand langages"></span><em></br>Langages informatique</em></li>
+              <li><span class="bar-expand methodo"></span><em></br>Méthodologie et modélisation</em></li>
   						<li><span class="bar-expand systeme"></span><em></br>Système d'exploitation et réseaux</em></li>
   						<li><span class="bar-expand logiciel"></span><em></br>Outils et atelier génie logiciel</em></li>
   						<li><span class="bar-expand bdd"></span><em></br>Système gestion bases de données</em></li>
