--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -56,7 +56,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/moi.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/gabin.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Gabin Salabert</a></h1>
 				<span style="color: white;" class="position"><a href="#" style="color: white">I.T Engineer student</a> in Paris</span>
 			</div>
