--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -559,7 +559,7 @@
 					                  <!-- <i class="icon-archive"></i> -->
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Host/Seller at Eclat Association</a> <span>Each year | 2015-2016-2017</span></h2>
+					               	<h2><a href="#">Host/Seller at Eclat Association -</a> <span>Each year | 2015-2016-2017</span></h2>
 					                  <p>- Sale of programs, books, newspapers, tee-shirt, goodies, etc. </br>
 					                  - Cash and stock management. </br>
 					                  - Inform people about the festival's organization, campsites, shows hours, shuttle bus, etc. </br>
@@ -575,7 +575,7 @@
 					                  <!-- <i class="icon-food"></i> -->
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">Head Waiter-</a> <span>2 monthes | June 2017 / July 2017</span></h2>
+					               	<h2><a href="#">Head Waiter -</a> <span>2 monthes | June 2017 / July 2017</span></h2>
 					                  <p>At Au Bureau chatou and Marinette Chatou. </br>- Barman, Table service, Dish washing, Back up management (Informatic service's saves). </p>
 					               </div>
 					            </div>
