--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -642,7 +642,7 @@
 										<div class="project" style="background-image: url(images/cook1.png);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/cook1.png', '_blank');">
-													<h3><a href="images/cook1.png">Cookination</a></h3>
+													<h3><a target="_blank" href="images/cook1.png">Cookination</a></h3>
 													<span>C# app which allows you to save some of your recipe, find out your IMC, etc. </span>
 												</div>
 											</div>
@@ -652,7 +652,7 @@
 										<div class="project" style="background-image: url(images/pok1.png);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/pok1.png', '_blank');">
-													<h3><a href="images/pok1.png">Team'Dex</a></h3>
+													<h3><a target="_blank" href="images/pok1.png">Team'Dex</a></h3>
 													<span>Javafx app which gets all of the 151 first Pokemon and enables you to create and save your own teams. Drag'n'drop, search, regex to get HTML.</span>
 												</div>
 											</div>
@@ -662,7 +662,7 @@
 										<div class="project" style="background-image: url(images/cook2.png);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/cook2.png', '_blank');">
-													<h3><a href="images/cook2.png">Cookination</a></h3>
+													<h3><a target="_blank" href="images/cook2.png">Cookination</a></h3>
 													<span>C# app which allows you to save some of your recipe, find out your IMC, etc. </span>
 												</div>
 											</div>
@@ -736,7 +736,7 @@
 										<div class="project" style="background-image: url(images/news1.png);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/news1.png', '_blank');">
-													<h3><a href="images/news1.png">News Feed</a></h3>
+													<h3><a target="_blank" href="images/news1.png">News Feed</a></h3>
 													<span>RSS flow stacker coded with PHP.</span>
 												</div>
 											</div>
@@ -746,7 +746,7 @@
 										<div class="project" style="background-image: url(images/news2.png);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/news2.png', '_blank');">
-													<h3><a href="images/news2.png">News Feed</a></h3>
+													<h3><a target="_blank" href="images/news2.png">News Feed</a></h3>
 													<span>RSS flow stacker coded with PHP.</span>
 												</div>
 											</div>
@@ -756,7 +756,7 @@
 										<div class="project" style="background-image: url(images/backoff1.png);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/backoff1.png', '_blank');">
-													<h3><a href="images/backoff1.png">Members manager for SiteW</a></h3>
+													<h3><a target="_blank" href="images/backoff1.png">Members manager for SiteW</a></h3>
 													<span>Coded with HTML5/CSS3/jQuerry during my traineeship. </br> - Smart pagination, dynamic search bar, sorting, checkboxes for grouped actions, etc.</span>
 												</div>
 											</div>
@@ -766,7 +766,7 @@
 										<div class="project" style="background-image: url(images/groups.png);">
 											<div class="desc">
 												<div class="con" onclick="window.open('images/groups.png', '_blank');">
-													<h3><a href="images/groups.png">Groups managers for SiteW</a></h3>
+													<h3><a target="_blank" href="images/groups.png">Groups managers for SiteW</a></h3>
 													<span>Coded with HTML5/CSS3/jQuerry during my traineeship. </br> - Smart pagination, dynamic search bar, sorting, checkboxes for grouped actions, etc.</span>
 												</div>
 											</div>
