--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -627,7 +627,7 @@
 							<p class="work-menu"><span><a href="#" class="active">UI / Master Detail</a></span> <span><a href="#">Android</a></span> <span><a href="#">Games</a></span> <span><a href="#">Web</a></span></p>
 						</div>
 						All of these projects can be found on my Github : https://github.com/GabinSalabert. -->
-						<div class="container">
+						<div class="container nottoolarge" style="width: 103%;">
 						  <ul class="nav nav-pills">
 						    <li class="active"><a data-toggle="pill" href="#home">UI / Master Detail</a></li>
 						    <li><a data-toggle="pill" href="#menu1">Games</a></li>
@@ -637,7 +637,6 @@
 						  
 						  <div class="tab-content">
 						    <div id="home" class="tab-pane fade in active">
-						      <div class="row">
 							      <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 										<div class="project" style="background-image: url(images/cook1.png);">
 											<div class="desc">
@@ -678,11 +677,9 @@
 											</div>
 										</div>
 									</div>
-								</div>
 						    </div>
 
 						    <div id="menu1" class="tab-pane fade">
-						    	<div class="row">
 							      	<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 										<div class="project" style="background-image: url(images/sok1.png);">
 											<div class="desc">
@@ -723,7 +720,6 @@
 											</div>
 										</div>
 									</div>
-								</div>
 						    </div>
 
 						    <div id="menu2" class="tab-pane fade">
@@ -731,7 +727,6 @@
 						    </div>
 
 						    <div id="menu3" class="tab-pane fade">
-						    	<div class="row">
 							      	<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 										<div class="project" style="background-image: url(images/news1.png);">
 											<div class="desc">
@@ -772,7 +767,6 @@
 											</div>
 										</div>
 									</div>
-								</div>
 						    </div>
 						  </div>
 						</div>
