--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -723,7 +723,26 @@
 						    </div>
 
 						    <div id="menu2" class="tab-pane fade">
-						      <p>Graddle issues , can't get screens. Todo later.</p>
+						      <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+									<div class="project" style="background-image: url(images/android1.png);">
+										<div class="desc">
+											<div class="con" onclick="window.open('images/android1.png', '_blank');">
+												<h3><a href="work.html">Falldamn</a></h3>
+												<span>Falldown game with some bonus and animations developed in Android (Java).</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+									<div class="project" style="background-image: url(images/android2.png);">
+										<div class="desc">
+											<div class="con" onclick="window.open('images/android2.png', '_blank');">
+												<h3><a href="work.html">Falldamn</a></h3>
+												<span>Falldown game with some bonus and animations developed in Android (Java).</span>
+											</div>
+										</div>
+									</div>
+								</div>
 						    </div>
 
 						    <div id="menu3" class="tab-pane fade">
