Skills bars edited

--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -42,6 +42,7 @@
 
 	<!-- Fichier CSS  -->
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/skillsbar.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -310,7 +311,81 @@
 						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 							<p>All those languages have been used at least once as part of my personal and school projects or during a traineeship. Don't hesitate to visit my Github to get a clearer idea of what i'm able to do and which tools I usually work with. Moreover, you can see some quick examples of my realizations in my web site's last section. Enjoy !</p>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+					</div>
+						<div class="container-skillbar colorlib-narrow-content animate-box" data-animate-effect="fadeInLeft" style="font-family: 'Source Sans Pro',Arial,sans-serif">
+							<div class="skillbar clearfix " data-percent="70%">
+								<div class="skillbar-title" style="background: #9BCB3C;word-break: break-all; word-wrap: break-word;"><span>HTML5/CSS3/Js-JQuerry</span></div>
+								<div class="skillbar-bar" style="background: #9BCB3C;"></div>
+							</div> <!-- Ende Skill Bar -->
+
+							<div class="skillbar clearfix " data-percent="80%">
+								<div class="skillbar-title" style="background: #b35a00; word-break: break-all; word-wrap: break-word;"><span>Design patterns</span></div>
+								<div class="skillbar-bar" style="background: #b35a00;"></div>
+							</div> <!-- Ende Skill Bar -->
+
+							<div class="skillbar clearfix " data-percent="40%">
+								<div class="skillbar-title" style="background: #084CA7;"><span>C++</span></div>
+								<div class="skillbar-bar" style="background: #084CA7;"></div>
+							</div> <!-- Ende Skill Bar -->
+
+							<div class="skillbar clearfix " data-percent="60%">
+								<div class="skillbar-title" style="background: #C70039;word-break: break-all; word-wrap: break-word;"><span>SQL/PLSQL/ProC</span></div>
+								<div class="skillbar-bar" style="background: #C70039;"></div>
+							</div> <!-- Ende Skill Bar -->
+
+							<div class="skillbar clearfix " data-percent="80%">
+								<div class="skillbar-title" style="background: #9a0f96;"><span>C/C#</span></div>
+								<div class="skillbar-bar" style="background: #9a0f96;"></div>
+							</div> <!-- Ende Skill Bar -->
+
+							<div class="skillbar clearfix " data-percent="90%">
+								<div class="skillbar-title" style="background: #838383;word-break: break-all; word-wrap: break-word;"><span>Osx, Windows, Linux</span></div>
+								<div class="skillbar-bar" style="background: #838383;"></div>
+							</div>
+
+							<div class="skillbar clearfix " data-percent="75%">
+								<div class="skillbar-title" style="background: #800101;"><span>Latex</span></div>
+								<div class="skillbar-bar" style="background: #800101;"></div>
+							</div>
+
+							<div class="skillbar clearfix " data-percent="40%">
+								<div class="skillbar-title" style="background: #8b8bb0;"><span>PHP</span></div>
+								<div class="skillbar-bar" style="background: #8b8bb0;"></div>
+							</div>
+
+							<div class="skillbar clearfix " data-percent="50%">
+								<div class="skillbar-title" style="background: #f1df6f;"><span>Python</span></div>
+								<div class="skillbar-bar" style="background: #f1df6f;"></div>
+							</div>
+
+							<div class="skillbar clearfix " data-percent="80%">
+								<div class="skillbar-title" style="background: #517FAD;"><span>Java</span></div>
+								<div class="skillbar-bar" style="background: #517FAD;"></div>
+							</div>
+
+							<div class="skillbar clearfix " data-percent="70%">
+								<div class="skillbar-title" style="background: #f5a000;"><span>UML</span></div>
+								<div class="skillbar-bar" style="background: #f5a000;"></div>
+							</div>
+
+							<div class="skillbar clearfix " data-percent="60%">
+								<div class="skillbar-title" style="background: #2b7f82;"><span>Arduino</span></div>
+								<div class="skillbar-bar" style="background: #2b7f82;"></div>
+							</div>
+
+							<div class="skillbar clearfix " data-percent="75%">
+								<div class="skillbar-title" style="background: #d8752e;word-break: break-all; word-wrap: break-word;"><span>Agile Method</span></div>
+								<div class="skillbar-bar" style="background: #d8752e;"></div>
+							</div>
+
+							<div class="skillbar clearfix " data-percent="65%">
+								<div class="skillbar-title" style="background: #8B3F3D;"><span>Ruby</span></div>
+								<div class="skillbar-bar" style="background: #8B3F3D;"></div>
+							</div>
+							 <!-- Ende Skill Bar -->
+						</div><!-- Ende container Skill Bar -->
+					</div>
+						<!--<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
 								<h3>Ruby</h3>
 								<div class="progress">
@@ -464,7 +539,7 @@
 								</div>
 							</div>
 						</div>
-				</div>
+				</div>-->
 			</section>
 
 			<section class="colorlib-education" data-section="education">
@@ -818,6 +893,7 @@
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
+	<script src="js/skillsbar.js"></script>
 
 	<!-- <script language=JavaScript>
 		var message = "Nop, don't ";
