resume download added

--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -85,8 +85,11 @@
 					<li><a style="color: #cb2027 ;" href="https://www.pinterest.fr/gabinsalabert/"><i class="icon-pinterest"></i></a></li>
 					<li><a style="color: white ;" href="https://github.com/GabinSalabert"><i class="icon-github"></i></a></li>
 				</ul>
+				<div class="icon" onclick="window.open('pro/Gabin_CV.pdf', '_blank');">
+				   <svg class="download" xmlns="http://www.w3.org/2000/svg" width="10%" height="10%" viewBox="0 0 14 17"><path class="arrow" fill="#fff" fill-rule="evenodd" d="M14 6h-4V0H4v6H0l7 7 7-7z"/><path class="line" fill="#fff" fill-rule="evenodd" d="M0 15v2h14v-2H0z" /></svg>
+				</br><label style="color: white;">Download my resume.</label>
+				</div>
 			</div>
-
 		</aside>
 
 		<div id="colorlib-main">
