--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -60,7 +60,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div style="border: 1px solid white; background-image: url(images/gabin.jpg);" class="author-img"></div>
+				<div style="border: 1px solid white; background-image: url(images/gabin.jpeg);" class="author-img"></div>
 				<h1 id="colorlib-logo" style="color: white">Gabin Salabert</h1>
 				<span style="color: white;" class="position">I.T Engineer student in Paris</span>
 			</div>
