New footer + new job added

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
    <!-- Script
    ================================================== -->
-  <!-- <script src="../src/index.js"></script> -->
-  <!-- <script src="js/brusher.min.js"></script> -->
+  <!--<script src="js/brusher.js"></script>
+  <script src="js/brusher.min.js"></script>-->
   <script src="js/modernizr.js"></script>
   <script src="js/animated_bg.js"></script>
   <script src="js/drawing_animation.js"></script>
@@ -72,7 +72,8 @@
    <script src="js/drawing_animation.js"></script>
    <script src="js/flipButton.js"></script>
    <!-- <script src="../src/index.js"></script> -->
-   <!-- <script src="js/brusher.min.js"></script> -->
+   <!--<script src="js/brusher.js"></script>
+   <script src="js/brusher.min.js"></script>-->
 </body>
 
 </html>
