--- a/NewWS/index.html
+++ b/NewWS/index.html
@@ -79,19 +79,18 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p style="color: white;"><small>&copy;Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </br> | Salabert Gabin |</small></p>
-				<ul>
+				<ul class="ul_networks">
 					<li><a style="color: #007bb6;" href="https://www.linkedin.com/in/gabin-salabert-30077b150/"><i class="icon-linkedin2"></i></a></li>
-					<li><a style="color: #cb2027 ;" href="https://www.pinterest.fr/gabinsalabert/"><i class="icon-pinterest"></i></a></li>
 					<li><a style="color: white ;" href="https://github.com/GabinSalabert"><i class="icon-github"></i></a></li>
+					<li><div title="Download my resume" class="icon" onclick="window.open('pro/Gabin_CV.pdf', '_blank');">
+				   <svg class="download icon-bite" xmlns="http://www.w3.org/2000/svg" width="10%" height="10%" viewBox="0 0 14 17"><path class="arrow" fill="#fff" fill-rule="evenodd" d="M14 6h-4V0H4v6H0l7 7 7-7z"/><path class="line" fill="#fff" fill-rule="evenodd" d="M0 15v2h14v-2H0z" /></svg>
+				</br>
+				</div></li>
+				<li><a style="color: #cb2027 ;" href="https://www.pinterest.fr/gabinsalabert/"><i class="icon-pinterest"></i></a></li>
 				</ul>
-				<div class="icon" onclick="window.open('pro/Gabin_CV.pdf', '_blank');">
-				   <svg class="download" xmlns="http://www.w3.org/2000/svg" width="10%" height="10%" viewBox="0 0 14 17"><path class="arrow" fill="#fff" fill-rule="evenodd" d="M14 6h-4V0H4v6H0l7 7 7-7z"/><path class="line" fill="#fff" fill-rule="evenodd" d="M0 15v2h14v-2H0z" /></svg>
-				</br><label style="color: white;">Download my resume.</label>
-				</div>
+				<p style="color: white;"><small>&copy;Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </br> | Salabert Gabin |</small></p>
 			</div>
 		</aside>
-
 		<div id="colorlib-main">
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
@@ -676,6 +675,18 @@
 										- Complete management of members structure to ease commercial and marketing actions.</br>
 										- Improvement and optimisation of user's experience : grouped actions, faster loading, research, sorting, user-friendly UI.</br>
 										- Dissemination of those functionalities in appropriate modules related to members and commercial management.</p>
+					               </div>
+					            </div>
+					         </article>
+
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					            <div class="timeline-entry-inner">
+					               <div style="background-image: url(images/sep.png); background-size: contain; background-repeat: no-repeat;" class="timeline-icon">
+					                  <!-- <i class="icon-food"></i> -->
+					               </div>
+					               <div class="timeline-label">
+					               	<h2><a href="#">Project Manager at SEPEFREI</a> <span>Current post | Since November 2018</span></h2>
+					                  <p></br> </p>
 					               </div>
 					            </div>
 					         </article>
